// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src | components | pages | search | BookingError snapshot should match snapshot with empty errors 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookingError
    errors={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3
          className="mb16"
          style={
            Object {
              "fontSize": "22px",
            }
          }
        >
          <span
            className="is-block"
            style={
              Object {
                "color": "#E60039",
                "fontSize": "4.5rem",
              }
            }
          >
            <Icon
              alt="erreur"
              svg="picto-echec"
            />
          </span>
        </h3>,
        <div
          style={
            Object {
              "fontSize": "20px",
            }
          }
        >
          <p
            className="mb36"
          >
            Une erreur est survenue lors de la réservation
          </p>
        </div>,
      ],
      "className": "booked text-center",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="is-block"
            style={
              Object {
                "color": "#E60039",
                "fontSize": "4.5rem",
              }
            }
          >
            <Icon
              alt="erreur"
              svg="picto-echec"
            />
          </span>,
          "className": "mb16",
          "style": Object {
            "fontSize": "22px",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Icon
              alt="erreur"
              svg="picto-echec"
            />,
            "className": "is-block",
            "style": Object {
              "color": "#E60039",
              "fontSize": "4.5rem",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "alt": "erreur",
              "svg": "picto-echec",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="mb36"
            >
              Une erreur est survenue lors de la réservation
            </p>,
            Array [],
          ],
          "style": Object {
            "fontSize": "20px",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Une erreur est survenue lors de la réservation",
              "className": "mb36",
            },
            "ref": null,
            "rendered": "Une erreur est survenue lors de la réservation",
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3
            className="mb16"
            style={
              Object {
                "fontSize": "22px",
              }
            }
          >
            <span
              className="is-block"
              style={
                Object {
                  "color": "#E60039",
                  "fontSize": "4.5rem",
                }
              }
            >
              <Icon
                alt="erreur"
                svg="picto-echec"
              />
            </span>
          </h3>,
          <div
            style={
              Object {
                "fontSize": "20px",
              }
            }
          >
            <p
              className="mb36"
            >
              Une erreur est survenue lors de la réservation
            </p>
          </div>,
        ],
        "className": "booked text-center",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="is-block"
              style={
                Object {
                  "color": "#E60039",
                  "fontSize": "4.5rem",
                }
              }
            >
              <Icon
                alt="erreur"
                svg="picto-echec"
              />
            </span>,
            "className": "mb16",
            "style": Object {
              "fontSize": "22px",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                alt="erreur"
                svg="picto-echec"
              />,
              "className": "is-block",
              "style": Object {
                "color": "#E60039",
                "fontSize": "4.5rem",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "erreur",
                "svg": "picto-echec",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="mb36"
              >
                Une erreur est survenue lors de la réservation
              </p>,
              Array [],
            ],
            "style": Object {
              "fontSize": "20px",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Une erreur est survenue lors de la réservation",
                "className": "mb36",
              },
              "ref": null,
              "rendered": "Une erreur est survenue lors de la réservation",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`src | components | pages | search | BookingError snapshot should match snapshot with errors as array 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookingError
    errors={
      Array [
        "do not output something",
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3
          className="mb16"
          style={
            Object {
              "fontSize": "22px",
            }
          }
        >
          <span
            className="is-block"
            style={
              Object {
                "color": "#E60039",
                "fontSize": "4.5rem",
              }
            }
          >
            <Icon
              alt="erreur"
              svg="picto-echec"
            />
          </span>
        </h3>,
        <div
          style={
            Object {
              "fontSize": "20px",
            }
          }
        >
          <p
            className="mb36"
          >
            Une erreur est survenue lors de la réservation
          </p>
        </div>,
      ],
      "className": "booked text-center",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="is-block"
            style={
              Object {
                "color": "#E60039",
                "fontSize": "4.5rem",
              }
            }
          >
            <Icon
              alt="erreur"
              svg="picto-echec"
            />
          </span>,
          "className": "mb16",
          "style": Object {
            "fontSize": "22px",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Icon
              alt="erreur"
              svg="picto-echec"
            />,
            "className": "is-block",
            "style": Object {
              "color": "#E60039",
              "fontSize": "4.5rem",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "alt": "erreur",
              "svg": "picto-echec",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="mb36"
            >
              Une erreur est survenue lors de la réservation
            </p>,
            Array [],
          ],
          "style": Object {
            "fontSize": "20px",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Une erreur est survenue lors de la réservation",
              "className": "mb36",
            },
            "ref": null,
            "rendered": "Une erreur est survenue lors de la réservation",
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3
            className="mb16"
            style={
              Object {
                "fontSize": "22px",
              }
            }
          >
            <span
              className="is-block"
              style={
                Object {
                  "color": "#E60039",
                  "fontSize": "4.5rem",
                }
              }
            >
              <Icon
                alt="erreur"
                svg="picto-echec"
              />
            </span>
          </h3>,
          <div
            style={
              Object {
                "fontSize": "20px",
              }
            }
          >
            <p
              className="mb36"
            >
              Une erreur est survenue lors de la réservation
            </p>
          </div>,
        ],
        "className": "booked text-center",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="is-block"
              style={
                Object {
                  "color": "#E60039",
                  "fontSize": "4.5rem",
                }
              }
            >
              <Icon
                alt="erreur"
                svg="picto-echec"
              />
            </span>,
            "className": "mb16",
            "style": Object {
              "fontSize": "22px",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                alt="erreur"
                svg="picto-echec"
              />,
              "className": "is-block",
              "style": Object {
                "color": "#E60039",
                "fontSize": "4.5rem",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "erreur",
                "svg": "picto-echec",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="mb36"
              >
                Une erreur est survenue lors de la réservation
              </p>,
              Array [],
            ],
            "style": Object {
              "fontSize": "20px",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Une erreur est survenue lors de la réservation",
                "className": "mb36",
              },
              "ref": null,
              "rendered": "Une erreur est survenue lors de la réservation",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`src | components | pages | search | BookingError snapshot should match snapshot with errors as object with array 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BookingError
    errors={
      Object {
        "reason_1": Array [
          "Reason value 1",
        ],
        "reason_2": Array [
          "Reason value 2",
        ],
        "reason_34": Array [
          "Reason value 3",
          "Reason value 4",
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h3
          className="mb16"
          style={
            Object {
              "fontSize": "22px",
            }
          }
        >
          <span
            className="is-block"
            style={
              Object {
                "color": "#E60039",
                "fontSize": "4.5rem",
              }
            }
          >
            <Icon
              alt="erreur"
              svg="picto-echec"
            />
          </span>
        </h3>,
        <div
          style={
            Object {
              "fontSize": "20px",
            }
          }
        >
          <p
            className="mb36"
          >
            Une erreur est survenue lors de la réservation
          </p>
          <p>
            Reason value 1
          </p>
          <p>
            Reason value 2
          </p>
          <p>
            Reason value 3
          </p>
          <p>
            Reason value 4
          </p>
        </div>,
      ],
      "className": "booked text-center",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="is-block"
            style={
              Object {
                "color": "#E60039",
                "fontSize": "4.5rem",
              }
            }
          >
            <Icon
              alt="erreur"
              svg="picto-echec"
            />
          </span>,
          "className": "mb16",
          "style": Object {
            "fontSize": "22px",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Icon
              alt="erreur"
              svg="picto-echec"
            />,
            "className": "is-block",
            "style": Object {
              "color": "#E60039",
              "fontSize": "4.5rem",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "alt": "erreur",
              "svg": "picto-echec",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "span",
        },
        "type": "h3",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="mb36"
            >
              Une erreur est survenue lors de la réservation
            </p>,
            Array [
              <p>
                Reason value 1
              </p>,
              <p>
                Reason value 2
              </p>,
              <p>
                Reason value 3
              </p>,
              <p>
                Reason value 4
              </p>,
            ],
          ],
          "style": Object {
            "fontSize": "20px",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Une erreur est survenue lors de la réservation",
              "className": "mb36",
            },
            "ref": null,
            "rendered": "Une erreur est survenue lors de la réservation",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": "error_0",
            "nodeType": "host",
            "props": Object {
              "children": "Reason value 1",
            },
            "ref": null,
            "rendered": "Reason value 1",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": "error_1",
            "nodeType": "host",
            "props": Object {
              "children": "Reason value 2",
            },
            "ref": null,
            "rendered": "Reason value 2",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": "error_2",
            "nodeType": "host",
            "props": Object {
              "children": "Reason value 3",
            },
            "ref": null,
            "rendered": "Reason value 3",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": "error_3",
            "nodeType": "host",
            "props": Object {
              "children": "Reason value 4",
            },
            "ref": null,
            "rendered": "Reason value 4",
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h3
            className="mb16"
            style={
              Object {
                "fontSize": "22px",
              }
            }
          >
            <span
              className="is-block"
              style={
                Object {
                  "color": "#E60039",
                  "fontSize": "4.5rem",
                }
              }
            >
              <Icon
                alt="erreur"
                svg="picto-echec"
              />
            </span>
          </h3>,
          <div
            style={
              Object {
                "fontSize": "20px",
              }
            }
          >
            <p
              className="mb36"
            >
              Une erreur est survenue lors de la réservation
            </p>
            <p>
              Reason value 1
            </p>
            <p>
              Reason value 2
            </p>
            <p>
              Reason value 3
            </p>
            <p>
              Reason value 4
            </p>
          </div>,
        ],
        "className": "booked text-center",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="is-block"
              style={
                Object {
                  "color": "#E60039",
                  "fontSize": "4.5rem",
                }
              }
            >
              <Icon
                alt="erreur"
                svg="picto-echec"
              />
            </span>,
            "className": "mb16",
            "style": Object {
              "fontSize": "22px",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Icon
                alt="erreur"
                svg="picto-echec"
              />,
              "className": "is-block",
              "style": Object {
                "color": "#E60039",
                "fontSize": "4.5rem",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alt": "erreur",
                "svg": "picto-echec",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "span",
          },
          "type": "h3",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="mb36"
              >
                Une erreur est survenue lors de la réservation
              </p>,
              Array [
                <p>
                  Reason value 1
                </p>,
                <p>
                  Reason value 2
                </p>,
                <p>
                  Reason value 3
                </p>,
                <p>
                  Reason value 4
                </p>,
              ],
            ],
            "style": Object {
              "fontSize": "20px",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Une erreur est survenue lors de la réservation",
                "className": "mb36",
              },
              "ref": null,
              "rendered": "Une erreur est survenue lors de la réservation",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": "error_0",
              "nodeType": "host",
              "props": Object {
                "children": "Reason value 1",
              },
              "ref": null,
              "rendered": "Reason value 1",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": "error_1",
              "nodeType": "host",
              "props": Object {
                "children": "Reason value 2",
              },
              "ref": null,
              "rendered": "Reason value 2",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": "error_2",
              "nodeType": "host",
              "props": Object {
                "children": "Reason value 3",
              },
              "ref": null,
              "rendered": "Reason value 3",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": "error_3",
              "nodeType": "host",
              "props": Object {
                "children": "Reason value 4",
              },
              "ref": null,
              "rendered": "Reason value 4",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
